backstage-reference/templates/example-eks-note-app/content/src/app/templates/service.yaml
apiVersion: v1
# Indicates this as a service
kind: Service
metadata:
 namespace: NAMESPACE
 # Service name
 name: notes-app-deployment-APP_NAME
spec:
 selector:
   # Selector for Pods
   app: notes-app
 ports:
   # Port Map
 - port: 80
   targetPort: 3003
   protocol: TCP
 type: LoadBalancer
